dz5/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-dz5
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: user-service-dz5
  template:
    metadata:
      labels:
        app: user-service-dz5
    spec:
      containers:   
        - name: user-service-dz5
          image: itzz/user-service:0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
