dz5/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-dz5
  annotations:
    prometheus.io/port: "metrics"
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/part-of: dms
spec:
  selector:
    app: user-service-dz5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: "metrics"
  type: ClusterIP
