dz5/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-dz5
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service-dz5 
                port:
                  number: 80
